@@ -7,6 +7,7 @@
     side box fixed size fixes #6
     scroll setting retained between sessions fixes #13
     fixed file info update on existing fixes #14 fixes #15
+    reuse window on open folder on desktop fixes #16
 0.7.4   2012-04-01:
     added git build instructions to README
     better standards compliance for data doc dirs fixes #8
